chore(waybar): prevent covering fullscreen windows and add blink on dead battery

--- a/home-manager/waybar/style-dark.css
+++ b/home-manager/waybar/style-dark.css
@@ -73,3 +73,16 @@ tooltip label{
     color: @base03;
 }
 
+#battery.dead:not(.charging) {
+    animation-name: blink;
+    animation-duration: 1.0s;
+    animation-timing-function: steps(15);
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes blink {
+    to {
+        color: transparent;
+    }
+}
