--- a/home-manager/waybar/style.css
+++ b/home-manager/waybar/style.css
@@ -72,3 +72,17 @@ tooltip label{
 #battery.dead {
     color: @base03;
 }
+
+#battery.dead:not(.charging) {
+    animation-name: blink;
+    animation-duration: 1.0s;
+    animation-timing-function: steps(15);
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes blink {
+    to {
+        color: transparent;
+    }
+}
